# pythonBackend

./: .gitignore  README.md  asyncDBChain.py  asyncDatabase.py  asyncTools.py  bulk_insert.py  localTests.py  main.py  openai_embedding.py  preprocessor.py  requirements.txt  temp_preprocess.py
preprocessor/: Cargo.toml
preprocessor/src/: main.rs
