[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.5"
console = "0.15.7"
serde_with = "3.0.0"